--- a/Flx0.css
+++ b/Flx0.css
@@ -66,8 +66,24 @@ body {
   justify-content: space-between;
 }
 
+.extra3 {
+  display: flex;
+  flex-wrap: wrap;
+  /* THIS IS FOR NEW FILE */
+  flex-flow: row wrap;
+  align-items: space-around;
+}
+
+.extra4 {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  /* THIS IS FOR NEW FILE */
+  flex-flow: row wrap;
+}
+
 .child {
-  box-sizing: border-box;
   background: lightslategray;
   /*width: 100%;*/
   /* horizontal alien */
@@ -75,6 +91,7 @@ body {
 
   /* THIS IS FOR NEW FILE */
   flex-basis: 30%;
+  box-sizing: border-box;
 
   padding-bottom: 5px;
   padding-top: 5px;
@@ -134,4 +151,21 @@ body {
   padding-left: 2px;
   color: var(--pColor);
   text-align: left;
+}
+.main_extra p {
+  margin: 0;
+}
+
+.extra3 .child {
+  width: 50px;
+  height: 50px;
+  background: var(--aColor);
+}
+
+.extra4 .child {
+  width: 110px;
+  height: 50px;
+  background: var(--aColor);
+  flex-basis: 5%;
+  box-sizing: border-box;
 }
